--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <nav>
                      <ul>
                           <li>
-                               <a href="#home">home</a>
+                               <a href="#home">Home</a>
                                <a href="#about">about</a>
                                <a href="#contact">contact</a>
                           </li>
